Bug 165995 - WebAssembly: constructors without new don't throw
Summary: WebAssembly: constructors without new don't throw
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: JF Bastien
URL:
Keywords:
Depends on:
Blocks: 161709
  Show dependency treegraph
 
Reported: 2016-12-17 07:43 PST by JF Bastien
Modified: 2017-03-22 10:53 PDT (History)
7 users (show)

See Also:


Attachments
patch (12.35 KB, patch)
2017-03-22 01:22 PDT, JF Bastien
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description JF Bastien 2016-12-17 07:43:31 PST
As discussed here: https://github.com/WebAssembly/design/issues/825#issuecomment-254917715
Our currently do.
Comment 1 JF Bastien 2017-03-21 01:56:01 PDT
To be clear: this is only for the WebAssembly.{Compile/Runtime/Link}Error types. Other WebAssembly constructors say "this constructor cannot be called as a function without new".
Comment 2 JF Bastien 2017-03-22 01:22:11 PDT
Created attachment 305084 [details]
patch
Comment 3 Saam Barati 2017-03-22 08:11:32 PDT
Comment on attachment 305084 [details]
patch

r=me
Comment 4 WebKit Commit Bot 2017-03-22 10:52:59 PDT
Comment on attachment 305084 [details]
patch

Clearing flags on attachment: 305084

Committed r214259: <http://trac.webkit.org/changeset/214259>
Comment 5 WebKit Commit Bot 2017-03-22 10:53:02 PDT
All reviewed patches have been landed.  Closing bug.