WebAssembly: constructors without new don't throw https://bugs.webkit.org/show_bug.cgi?id=165995

Reviewed by Saam Barati.

JSTests:

* wasm/js-api/test_basic_api.js:
(const.c.in.constructorProperties.switch):

Source/JavaScriptCore:

* wasm/js/WebAssemblyCompileErrorConstructor.cpp:
(JSC::constructJSWebAssemblyCompileError):
(JSC::callJSWebAssemblyCompileError):
* wasm/js/WebAssemblyLinkErrorConstructor.cpp:
(JSC::constructJSWebAssemblyLinkError):
(JSC::callJSWebAssemblyLinkError):
* wasm/js/WebAssemblyRuntimeErrorConstructor.cpp:
(JSC::constructJSWebAssemblyRuntimeError):
(JSC::callJSWebAssemblyRuntimeError):


Canonical link: https://commits.webkit.org/186888@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214259 268f45cc-cd09-0410-ab3c-d52691b4dbfc